tests/neg/i6795.check
-- Error: tests/neg/i6795.scala:1:13 -----------------------------------------------------------------------------------
1 |erased class Foo // error
  |^^^^^^^^^^^^^^^^
  |modifier(s) `erased' incompatible with type definition
